# codex-trader

./: .gitignore  PROJECT_PLAN.md  README.md  STRATEGY_RESEARCH.md  config.json  critique.md  dashboard.py  pyproject.toml  review.md
quant_trader/: __init__.py  backtest.py  brokers.py  cli.py  config.py  data.py  features.py  metrics.py  optimizer.py  strategies.py
quant_trading_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: dual_momentum_equity_curve.csv  dual_momentum_how_it_works.md  dual_momentum_metrics.txt  mean_reversion_equity_curve.csv  mean_reversion_how_it_works.md  mean_reversion_metrics.txt  ml_classifier_equity_curve.csv  ml_classifier_how_it_works.md  ml_classifier_metrics.txt  options_translation.md  prices_2018_to_2026-03-30.csv  summary.txt
tests/: test_smoke.py
