[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-trader"
version = "0.1.0"
description = "Quant research toolkit with historical backtesting, ML signals, and paper trading adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "streamlit>=1.40.0",
  "yfinance>=0.2.54",
]

[project.scripts]
codex-trader = "quant_trader.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
